--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8" /> <!-- HTML5 -->
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" /> <!-- HTML 4.x -->
-    <meta http-equiv="refresh" content="0; URL=https://s0nda.000webhostapp.com/blog/index.html">
+    <meta http-equiv="refresh" content="0; URL=https://s0nda.000webhostapp.com/blog/index.php">
     <title></title>
 </head>
 </html>
