--- a/cobe/index.html
+++ b/cobe/index.html
@@ -13,6 +13,9 @@
   <h1>CobeJS (COde BEautifier in Javascript)</h1>
   <h2>Syntax highlighting</h2>
   <br />
+  <b>Source:</b> <a href="https://github.com/s0nda/cobe">cobe.js</a>
+  <br />
+  <br />
   <button onclick="COBE.switch_theme('DARK');">DARK</button>
   <button onclick="COBE.switch_theme('DARK_RETRO');">DARK_RETRO</button>
   <button onclick="COBE.switch_theme('PURPLE_RETRO');">PURPLE_RETRO</button>
