Add folder "cobe.js"

--- a/cobe/index.html
+++ b/cobe/index.html
@@ -9,7 +9,7 @@
   <link href="style.css" type="text/css" rel="stylesheet">
   <title>COde BEautifier</title>
 <body>
-  <script type="text/javascript" src="cobe_min.js"></script>
+  <script type="text/javascript" src="cobe.js"></script>
   <h1>CobeJS (COde BEautifier in Javascript)</h1>
   <h2>Syntax highlighting</h2>
   <br />
